Forget to commit yesterdays work (:

--- a/btree/iter/Makefile
+++ b/btree/iter/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 CFLAGS=-Wall -std=c11 -pedantic -lm
 FILES=btree.c ../btree.c stack.c ../test_util.c ../test.c
 
-.PHONY: test clean
+.PHONY: test
 
 test: $(FILES)
 	$(CC) $(CFLAGS) -o $@ $(FILES)
